<resources>
    <string name="app_name">Smart Countries</string>
    <string name="learn_button">Learn about countries</string>
    <string name="test_button">Test your knowledge</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="filter_by_name">Filter by name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email_password_error">Incorrect inputted data</string>
    <string name="new_user_registration">New user registration</string>
    <string name="ivCountryFlagContentDescription">Flag of the country</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="say_hello_with_name">Hello, %s!</string>
    <string name="last_scores">Your last scores: %d</string>
    <string name="start_quiz">Start quiz</string>
    <string name="scores">Scores</string>
    <string name="logout">Logout</string>
    <string name="set_reminder_label">Set reminder to test your knowledge periodically:</string>
    <string name="set_reminder">Set reminder</string>
    <string name="disable_reminder">Disable reminder</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="quiz_question_flag">Which country flag is shown in the picture?</string>
    <string name="next_question">Next</string>
    <string name="scores_text">Scores: %d</string>
    <string name="questions_text">"Question: %1$d/%2$d"</string>
    <string name="reminder_start">"Reminder is set!"</string>
    <string name="reminder_stop">"Reminder is disabled!"</string>
    <string name="result_perfect">"You're awesome!"</string>
    <string name="result_good">"Not Good, not bad!"</string>
    <string name="result_bad">"You can better!"</string>
    <string name="area_text">Area: %s</string>
    <string name="population_text">Population: %s</string>
    <string name="registration_success">%s is now registered!</string>
    <string name="notification_message">"Tap to open SmartCountries and start testing"</string>
    <string name="reset_scores">Reset scores</string>
    <string name="reset_scores_question_message">Do you really want to reset scores database?</string>
    <string name="in_seconds">%s seconds</string>
    <string name="get_some_points">%f points</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>