<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/great_offset"
    android:paddingStart="@dimen/great_offset"
    android:paddingEnd="@dimen/great_offset"
    tools:context=".fragments.QuizFragment">

    <TextView
        android:id="@+id/tv_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_text_size"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/tv_question_number"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Scores: 30" />

    <TextView
        android:id="@+id/tv_question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_scores"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Question: 1/10" />

    <TextView
        android:id="@+id/tv_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_offset"
        android:text="@string/quiz_question_flag"
        android:textAlignment="center"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_scores" />

    <ImageView
        android:id="@+id/iv_question"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/big_offset"
        android:background="@drawable/imageview_border"
        android:contentDescription="@string/ivCountryFlagContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question_text" />

    <Button
        android:id="@+id/btn_option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_offset"
        app:layout_constraintTop_toBottomOf="@id/iv_question"
        tools:text="Option1" />

    <Button
        android:id="@+id/btn_option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_offset"
        app:layout_constraintTop_toBottomOf="@id/btn_option1"
        tools:text="Option2" />

    <Button
        android:id="@+id/btn_option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_offset"
        app:layout_constraintTop_toBottomOf="@id/btn_option2"
        tools:text="Option3" />

    <Button
        android:id="@+id/btn_option4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_offset"
        app:layout_constraintTop_toBottomOf="@id/btn_option3"
        tools:text="Option4" />

    <Button
        android:id="@+id/btn_next_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        app:layout_constraintTop_toBottomOf="@id/btn_option4"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>